# ChangeLog for net-misc/electrum
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/electrum/ChangeLog,v 1.6 2013/03/25 07:45:57 blueness Exp $

*electrum-1.7.2 (25 Mar 2013)

  25 Mar 2013; Anthony G. Basile <blueness@gentoo.org> +electrum-1.7.2.ebuild:
  Version bump

  22 Mar 2013; Anthony G. Basile <blueness@gentoo.org> electrum-1.7.ebuild:
  Fix files deleted for USE=qt or gtk, thanks Maks Verver, bug #462532

*electrum-1.7 (19 Mar 2013)

  19 Mar 2013; Anthony G. Basile <blueness@gentoo.org> +electrum-1.7.ebuild:
  Version bump

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*electrum-1.6.2 (12 Feb 2013)

  12 Feb 2013; Anthony G. Basile <blueness@gentoo.org> +electrum-1.6.2.ebuild:
  Version bump, bug #452932

*electrum-1.0 (16 Sep 2012)

  16 Sep 2012; Anthony G. Basile <blueness@gentoo.org> +electrum-1.0.ebuild,
  +metadata.xml:
  Initial commit