@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/electrum
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/electrum/ChangeLog,v 1.6 2013/03/25 07:45:57 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/electrum/ChangeLog,v 1.7 2013/04/14 10:03:20 blueness Exp $
+
+*electrum-1.7.3 (14 Apr 2013)
+
+  14 Apr 2013; Anthony G. Basile <blueness@gentoo.org> +electrum-1.7.3.ebuild:
+  Version bump
 
 *electrum-1.7.2 (25 Mar 2013)
 
